[package]
name = "js-framework-benchmark-wasm-bindgen"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.76"
js-sys = "0.3.53"
console_error_panic_hook = "*"
getrandom = {version = "0.2", features = ["js"]}
rand = {version = "0.8", features = ["small_rng"]}
smallstr = {version = "0.3.0"}
edom = { version="0.1.0" }

[dependencies.web-sys]
version = "0.3.53"
features = [
  'Document',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'Node',
  'NodeList',
  'Window',
  'Text',
  'console'
]

[profile.release]
lto = true
panic = "abort"
